[package]
name = "screen-region-share"
version = "0.1.0"
edition = "2021"
description = "A window that captures and displays the screen region behind it"

[dependencies]
winit = "0.28"
pixels = "0.12.0"
scrap = "0.5"
env_logger = "0.10.0"
log = "0.4"
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }