[package]
name = "screen-region-share"
version = "0.1.0"
edition = "2021"
description = "A window that captures and displays the screen region behind it"

[dependencies]
winit = "0.28"
pixels = "0.12.0"
xcap = "0.4.0"
env_logger = "0.10.0"
log = "0.4"
anyhow = "1.0"
global-hotkey = "0.6.4"
rayon = "1.10.0"
wide = "0.7.32"
